# clearpath-ui

./: ._sessions  .env  .gitignore  .pre-commit-config.yaml  CONTEXT.json  CONTEXT_SUMMARY.md  LICENSE  Makefile  README.md  Training Data - Sheet1.csv  addresses.txt  addresses_to_satellite.py  codex.files  compute_distance_example.py  dev-server.js  env.sample  fallback-suggest.js  fetch_satellite_bbox.py  geo_distance.py  index.html  package-lock.json  package.json  plot_bbox.py  project_outline.txt  pyproject.toml  requirements.txt  run  run.cmd  run.ps1  run.sh  server.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.cursor/: rules
.github/workflows/: ci.yml
building_images/: 001_3511_167th_pl_ne_bellevue_wa_98008.json  001_microsoft_building_18.json  002_1041_149th_pl_se_bellevue_wa_98007.json
config/: codex.sqlite3  secret_key
data/: community-entrances.json  user-profiles.json
docs/: accessibility-profiles.md  mobile-experience.md
entrypoint/: README.md  requirements.txt
entrypoint/data/: labels.csv  training_input.csv
entrypoint/src/: cnn_infer.py  dataset.py  geo.py  model.py  predict.py  prep_labels.py  train.py
public/: manifest.webmanifest
server/: server.js
server/lib/: geo.js  (+1 more)
src/: App.tsx  main.tsx  sw.ts  types.ts
supermemory-db/: .checkpoint  .config  .gossip  .health  .locks  .manifest  .peers  .rollup  .schema  .stats  index.json
tests/: test_distance.py
web/: accessibility.js  account.js  app.js  index.html  manifest.json  service-worker.js  settings.html  settings.js  styles.css  theme.js
(+72 files in other folders)
