[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satdist"
version = "0.1.0"
description = "Satellite bbox utilities: fetch images, compute distances, and build interactive maps"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Project Contributors" }]
dependencies = [
  "requests>=2.28",
  "Pillow>=9.5",
  "folium>=0.15",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "mypy>=1.8",
  "ruff>=0.4",
  "black>=24.3",
  "types-requests",
  "types-Pillow",
]

[project.scripts]
satdist = "satdist.cli:main"
satdist-fetch = "satdist.cli:main"
satdist-distance = "satdist.cli:main"
satdist-map = "satdist.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true

